--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -42,9 +42,17 @@ test-suite tmp-postgres-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
+  other-modules: Database.Postgres.Temp.InternalSpec
   build-depends:       base
                      , tmp-postgres
-  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
+                     , hspec
+                     , hspec-discover
+                     , temporary
+                     , directory
+                     , process
+                     , postgresql-simple
+                     , bytestring
+  ghc-options:        -Wall -Wno-unused-do-bind -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 source-repository head
