--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -1,16 +1,15 @@
 name:                tmp-postgres
-version:             0.1.0.3
+version:             0.1.0.4
 synopsis: Start and stop a temporary postgres for testing
 description:
  This module provides functions greating a temporary postgres instance on a random port for testing.
  .
- >
- > result <- 'start' []
+ > result <- start []
  > case result of
  >   Left err -> print err
  >   Right tempDB -> do
  >     -- Do stuff
- >     'stop' tempDB
+ >     stop tempDB
  .
  The are few different methods for starting @postgres@ which provide different
  methods of dealing with @stdout@ and @stderr@.
