--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -14,8 +14,14 @@ description:
  The are few different methods for starting @postgres@ which provide different
  methods of dealing with @stdout@ and @stderr@.
  .
- The start methods use a config based on the one used by [pg_tmp](http://ephemeralpg.org/), but can be overriden
+ The start methods use a config based on the one used by pg_tmp (http://ephemeralpg.org/), but can be overriden
  by in different values to the first argument of the start functions.
+ .
+ WARNING!!
+ Ubuntu's PostgreSQL installation does not put @initdb@ on the @PATH@. We need to add it manually. The necessary binaries are in the @\/usr\/lib\/postgresql\/VERSION\/bin\/@ directory, and should be added to the @PATH@
+ .
+ > echo "export PATH=$PATH:/usr/lib/postgresql/VERSION/bin/" >> /home/ubuntu/.bashrc
+ .
 homepage:            https://github.com/jfischoff/tmp-postgres#readme
 license:             BSD3
 license-file:        LICENSE
