--- a/.travis.yml
+++ b/.travis.yml
@@ -37,59 +37,59 @@ matrix:
   #- env: BUILD=cabal GHCVER=7.4.2 CABALVER=1.16 HAPPYVER=1.19.5 ALEXVER=3.1.7
   #  compiler: ": #GHC 7.4.2"
   #  /usr/lib/postgresql/9.1/bincabal-install-1.16,ghc-7.4.2,happy-1.19.5,alex-3.1.7], sources: [hvr-ghc]}}
-  - env: BUILD=cabal GHCVER=7.6.3 CABALVER=1.16 HAPPYVER=1.19.5 ALEXVER=3.1.7 PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.6/bin
+  - env: BUILD=cabal GHCVER=7.6.3 CABALVER=1.16 HAPPYVER=1.19.5 ALEXVER=3.1.7 PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.1/bin/bin
     compiler: ": #GHC 7.6.3"
     /usr/lib/postgresql/9.1/bincabal-install-1.16,ghc-7.6.3,happy-1.19.5,alex-3.1.7], sources: [hvr-ghc]}}
-  - env: BUILD=cabal GHCVER=7.8.4 CABALVER=1.18 HAPPYVER=1.19.5 ALEXVER=3.1.7 PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.6/bin
+  - env: BUILD=cabal GHCVER=7.8.4 CABALVER=1.18 HAPPYVER=1.19.5 ALEXVER=3.1.7 PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.1/bin/bin
     compiler: ": #GHC 7.8.4"
     /usr/lib/postgresql/9.1/bincabal-install-1.18,ghc-7.8.4,happy-1.19.5,alex-3.1.7], sources: [hvr-ghc]}}
-  - env: BUILD=cabal GHCVER=7.10.3 CABALVER=1.22 HAPPYVER=1.19.5 ALEXVER=3.1.7 PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.6/bin
+  - env: BUILD=cabal GHCVER=7.10.3 CABALVER=1.22 HAPPYVER=1.19.5 ALEXVER=3.1.7 PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.1/bin/bin
     compiler: ": #GHC 7.10.3"
     /usr/lib/postgresql/9.1/bincabal-install-1.22,ghc-7.10.3,happy-1.19.5,alex-3.1.7], sources: [hvr-ghc]}}
-  - env: BUILD=cabal GHCVER=8.0.1 CABALVER=1.24 HAPPYVER=1.19.5 ALEXVER=3.1.7 PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.6/bin
+  - env: BUILD=cabal GHCVER=8.0.1 CABALVER=1.24 HAPPYVER=1.19.5 ALEXVER=3.1.7 PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.1/bin/bin
     compiler: ": #GHC 8.0.1"
     /usr/lib/postgresql/9.1/bincabal-install-1.24,ghc-8.0.1,happy-1.19.5,alex-3.1.7], sources: [hvr-ghc]}}
 
   # Build with the newest GHC and cabal-install. This is an accepted failure,
   # see below.
-  - env: BUILD=cabal GHCVER=head  CABALVER=head HAPPYVER=1.19.5 ALEXVER=3.1.7 PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.6/bin
+  - env: BUILD=cabal GHCVER=head  CABALVER=head HAPPYVER=1.19.5 ALEXVER=3.1.7 PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.1/bin/bin
     compiler: ": #GHC HEAD"
     /usr/lib/postgresql/9.1/bincabal-install-head,ghc-head,happy-1.19.5,alex-3.1.7], sources: [hvr-ghc]}}
 
   # The Stack builds. We can pass in arbitrary Stack arguments via the ARGS
   # variable, such as using --stack-yaml to point to a different file.
-  - env: BUILD=stack ARGS="" PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.6/bin
+  - env: BUILD=stack ARGS="" PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.1/bin/bin
     compiler: ": #stack default"
     /usr/lib/postgresql/9.1/binghc-7.10.3], sources: [hvr-ghc]}}
 
   # Nightly builds are allowed to fail
-  - env: BUILD=stack ARGS="--resolver nightly" PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.6/bin
+  - env: BUILD=stack ARGS="--resolver nightly" PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.1/bin/bin
     compiler: ": #stack nightly"
     /usr/lib/postgresql/9.1/binlibgmp,libgmp-dev]}}
 
   # Build on OS X in addition to Linux
-  - env: BUILD=stack ARGS="" PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.6/bin
+  - env: BUILD=stack ARGS="" PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.1/bin/bin
     compiler: ": #stack default osx"
     os: osx
 
-  - env: BUILD=stack ARGS="--resolver lts-2" PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.6/bin
+  - env: BUILD=stack ARGS="--resolver lts-2" PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.1/bin/bin
     compiler: ": #stack 7.8.4 osx"
     os: osx
 
-  - env: BUILD=stack ARGS="--resolver lts-3" PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.6/bin
+  - env: BUILD=stack ARGS="--resolver lts-3" PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.1/bin/bin
     compiler: ": #stack 7.10.2 osx"
     os: osx
 
-  - env: BUILD=stack ARGS="--resolver lts-6" PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.6/bin
+  - env: BUILD=stack ARGS="--resolver lts-6" PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.1/bin/bin
     compiler: ": #stack 7.10.3 osx"
     os: osx
 
-  - env: BUILD=stack ARGS="--resolver nightly" PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.6/bin
+  - env: BUILD=stack ARGS="--resolver nightly" PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.1/bin/bin
     compiler: ": #stack nightly osx"
     os: osx
 
   allow_failures:
-  - env: BUILD=cabal GHCVER=head  CABALVER=head HAPPYVER=1.19.5 ALEXVER=3.1.7 PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.6/bin
+  - env: BUILD=cabal GHCVER=head  CABALVER=head HAPPYVER=1.19.5 ALEXVER=3.1.7 PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.1/bin/bin
   - env: BUILD=stack ARGS="--resolver nightly"
 
 before_install:
