--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -60,7 +60,7 @@ test-suite tmp-postgres-test
                      , process
                      , postgresql-simple
                      , bytestring
-  ghc-options:        -Wall -Wno-unused-do-bind -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 source-repository head
