--- a/.travis.yml
+++ b/.travis.yml
@@ -58,12 +58,12 @@ matrix:
 
   # The Stack builds. We can pass in arbitrary Stack arguments via the ARGS
   # variable, such as using --stack-yaml to point to a different file.
-  - env: BUILD=stack ARGS=""
+  - env: BUILD=stack ARGS="" 'PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.1/bin'
     compiler: ": #stack default"
     addons: {apt: {packages: [ghc-7.10.3], sources: [hvr-ghc]}}
 
   # Nightly builds are allowed to fail
-  - env: BUILD=stack ARGS="--resolver nightly"
+  - env: BUILD=stack ARGS="--resolver nightly" 'PATH=$HOME/.local/bin:$PATH:/usr/lib/postgresql/9.1/bin'
     compiler: ": #stack nightly"
     addons: {apt: {packages: [libgmp,libgmp-dev]}}
 
