now using `Options` data type from postgres-options
reworked the way all the options work
exported defaultOptions, TmpOptions, InitDbOptions, defaultInitDbOptions, DatabaseName

using postgres-options-0.1.0.1

using disciplined imports

--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -49,6 +49,7 @@ library
                , network
                , bytestring
                , postgresql-simple
+               , postgres-options
                , port-utils
                , async
   ghc-options: -Wall
