--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -60,6 +60,7 @@ test-suite test
   main-is:             Spec.hs
   other-modules: Database.Postgres.Temp.InternalSpec
   build-depends:       base
+                     , postgresql-libpq
                      , tmp-postgres
                      , hspec
                      , hspec-discover
@@ -68,6 +69,7 @@ test-suite test
                      , process
                      , postgresql-simple
                      , bytestring
+                     , mtl
   ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
