--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -53,6 +53,7 @@ library
                , port-utils
                , async
                , generic-monoid
+               , postgresql-simple-opts
   ghc-options: -Wall
   default-language:    Haskell2010
 
