--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -41,6 +41,13 @@ library
   hs-source-dirs:      src
   exposed-modules: Database.Postgres.Temp
                  , Database.Postgres.Temp.Internal
+                 , Database.Postgres.Temp.Etc
+  default-extensions: LambdaCase
+    , DerivingStrategies
+    , DerivingVia
+    , ScopedTypeVariables
+    , RecordWildCards
+    , DeriveGeneric
   build-depends: base >= 4.6 && < 5
                , temporary
                , process >= 1.2.0.0
