more clean up. removed more input types

--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -48,6 +48,7 @@ library
     , ScopedTypeVariables
     , RecordWildCards
     , DeriveGeneric
+    , OverloadedStrings
   build-depends: base >= 4.6 && < 5
                , temporary
                , process >= 1.2.0.0
