--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -81,6 +81,8 @@ test-suite test
                      , postgresql-simple
                      , bytestring
                      , mtl
+                     , unix
+                     , temporary
   ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
