--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -83,6 +83,7 @@ test-suite test
                      , mtl
                      , unix
                      , temporary
+                     , either
   ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
