--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -84,6 +84,7 @@ test-suite test
                      , unix
                      , temporary
                      , either
+                     , transformers
   ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
