--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -50,6 +50,7 @@ library
     , RecordWildCards
     , DeriveGeneric
     , OverloadedStrings
+    , RecordWildCards
   build-depends: base >= 4.6 && < 5
                , temporary
                , process >= 1.2.0.0
@@ -63,6 +64,8 @@ library
                , async
                , generic-monoid
                , postgresql-simple-opts
+               , either
+               , transformers
   ghc-options: -Wall
   default-language:    Haskell2010
 
@@ -86,8 +89,19 @@ test-suite test
                      , temporary
                      , either
                      , transformers
+                     , postgresql-simple-opts
+                     , postgres-options
   ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
+  default-extensions: LambdaCase
+    , DerivingStrategies
+    , DerivingVia
+    , ScopedTypeVariables
+    , RecordWildCards
+    , DeriveGeneric
+    , OverloadedStrings
+    , RecordWildCards
+
 
 source-repository head
   type:     git
