--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -52,6 +52,7 @@ library
     , OverloadedStrings
     , RecordWildCards
     , ApplicativeDo
+    , DeriveFunctor
   build-depends: base >= 4.6 && < 5
                , temporary
                , process >= 1.2.0.0
