--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -32,6 +32,7 @@ category:            Web
 build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
+tested-with: GHC ==8.6.5
 
 library
   hs-source-dirs:      src
