try to add postgres to image

--- a/.travis.yml
+++ b/.travis.yml
@@ -60,6 +60,10 @@ before_install:
       awk -f $TOP/.colorful.awk
     }
   - echo text | color_cabal_output
+  - sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys B97B0AFCAA1A47F044F244A07FCC7D46ACCC4CF8
+    echo "deb http://apt.postgresql.org/pub/repos/apt/ xenial-pgdg main" > /etc/apt/sources.list.d/pgdg.list
+    sudo apt-get update
+    apt-get -y install postgresql-10.0 postgresql-client-10.0 postgresql-contrib-10.0
 install:
   - ${CABAL} --version
   - echo "$(${HC} --version) [$(${HC} --print-project-git-commit-id 2> /dev/null || echo '?')]"
