--- a/.travis.yml
+++ b/.travis.yml
@@ -61,7 +61,7 @@ before_install:
     }
   - echo text | color_cabal_output
   - sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys B97B0AFCAA1A47F044F244A07FCC7D46ACCC4CF8
-    echo "deb http://apt.postgresql.org/pub/repos/apt/ xenial-pgdg main" > /etc/apt/sources.list.d/pgdg.list
+    echo "deb http://apt.postgresql.org/pub/repos/apt/ xenial-pgdg main" | sudo tee -a /etc/apt/sources.list
     sudo apt-get update
     apt-get -y install postgresql-10.0 postgresql-client-10.0 postgresql-contrib-10.0
 install:
