--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -87,6 +87,7 @@ test-suite test
                      , either
                      , transformers
                      , postgres-options
+                     , port-utils
   ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
   default-extensions: LambdaCase
