--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -51,6 +51,9 @@ library
     , ApplicativeDo
     , DeriveFunctor
     , ViewPatterns
+    , DefaultSignatures
+    , TypeSynonymInstances
+    , FlexibleInstances
   build-depends: base >= 4.6 && < 5
                , temporary
                , process >= 1.2.0.0
