Remove lastoid and redoing defaults

--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -51,6 +51,7 @@ library
     , ApplicativeDo
     , DeriveFunctor
     , ViewPatterns
+    , GeneralizedNewtypeDeriving
   build-depends: base >= 4.6 && < 5
                , temporary
                , process >= 1.2.0.0
