Add pretty printer. Bump lts. Remove external doc

--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -66,6 +66,7 @@ library
                , either
                , transformers
                , containers
+               , ansi-wl-pprint
   ghc-options: -Wall
   default-language:    Haskell2010
 
