--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -85,6 +85,15 @@ test-suite test
     , RecordWildCards
     , ScopedTypeVariables
 
+benchmark benchmark
+  type: exitcode-stdio-1.0
+  main-is: Main.hs
+  hs-source-dirs: benchmark
+  default-language: Haskell2010
+  ghc-options: -O2 -Wall
+  build-depends: base
+    , criterion
+    , tmp-postgres
 
 source-repository head
   type:     git
