initial implementation of withNewDbConfig

--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -67,6 +67,7 @@ test-suite test
                      , postgres-options
                      , postgresql-simple
                      , process
+                     , random
                      , temporary
                      , tmp-postgres
                      , unix
