--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -58,6 +58,7 @@ library
 test-suite test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
+  other-modules: Plans
   main-is:             Spec.hs
   build-depends:       base
                      , containers
