--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -1,5 +1,5 @@
 name:                tmp-postgres
-version:             1.15.0.0
+version:             1.15.1.0
 synopsis: Start and stop a temporary postgres
 description: Start and stop a temporary postgres. See README.md
 homepage:            https://github.com/jfischoff/tmp-postgres#readme
@@ -23,6 +23,9 @@ library
                  , Database.Postgres.Temp.Internal.Config
   default-extensions:
       ApplicativeDo
+    , BlockArguments
+    , CPP
+    , DeriveAnyClass
     , DeriveFunctor
     , DeriveGeneric
     , DerivingStrategies
@@ -37,10 +40,13 @@ library
     , TupleSections
     , ViewPatterns
   build-depends: base >= 4.6 && < 5
+               , base64-bytestring
                , ansi-wl-pprint
                , async
                , bytestring
                , containers
+               , cryptohash-sha1
+               , deepseq
                , directory
                , generic-monoid
                , port-utils
@@ -48,6 +54,7 @@ library
                , postgresql-simple
                , process >= 1.2.0.0
                , random
+               , stm
                , temporary
                , transformers
                , unix
@@ -77,7 +84,8 @@ test-suite test
   ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
   default-extensions:
-      DeriveDataTypeable
+      BlockArguments
+    , DeriveDataTypeable
     , DeriveGeneric
     , DerivingStrategies
     , DerivingVia
