--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -1,5 +1,5 @@
 name:                tmp-postgres
-version:             1.28.1.0
+version:             1.29.0.0
 synopsis: Start and stop a temporary postgres
 description: Start and stop a temporary postgres. See README.md
 homepage:            https://github.com/jfischoff/tmp-postgres#readme
@@ -105,6 +105,7 @@ benchmark benchmark
     , deepseq
     , postgres-options
     , postgresql-simple
+    , temporary
     , tmp-postgres
   default-extensions:
       ApplicativeDo
