--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -65,6 +65,7 @@ test-suite test
   hs-source-dirs:      test
   main-is:             Main.hs
   build-depends:       base
+                     , async
                      , containers
                      , directory
                      , generic-monoid
