--- a/tmp-postgres.cabal
+++ b/tmp-postgres.cabal
@@ -1,5 +1,5 @@
 name:                tmp-postgres
-version:             1.31.0.1
+version:             1.31.0.2
 synopsis: Start and stop a temporary postgres
 description: Start and stop a temporary postgres. See README.md
 homepage:            https://github.com/jfischoff/tmp-postgres#readme
@@ -65,6 +65,7 @@ test-suite test
   hs-source-dirs:      test
   main-is:             Main.hs
   build-depends:       base
+                     , async
                      , containers
                      , directory
                      , generic-monoid
